Arreglar links de paginas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elegance Attire</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
@@ -20,19 +20,19 @@
     <nav class="nav-bar">
       <ul>
         <li>
-          <a href="index.html" class="active">Home</a>
+          <a href="../index.html" class="active">Home</a>
         </li>
         <li>
-          <a href="pages-male.html">Products Male</a>
+          <a href="./pages/pages-male.html">Products Male</a>
         </li>
         <li>
-          <a href="pages-female.html">Products Female</a>
+          <a href="./pages/pages-female.html">Products Female</a>
         </li>
         <li>
-          <a href="pages-kids.html">Products Kids</a>
+          <a href="./pages/pages-kids.html">Products Kids</a>
         </li>
         <li>
-          <a href="contacto.html">Contact</a>
+          <a href="./pages/contacto.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -112,6 +112,6 @@
 	<p>Para ver el aviso de privacidad, accede a miempresa.com/aviso</p>
   </footer>
 </div>
-  <script src="script.js"></script>
+  <script src="./script/script.js"></script>
 </body>
 </html>
