--- a/pages/pages-male.html
+++ b/pages/pages-male.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elegance Attire</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
@@ -20,19 +20,19 @@
     <nav class="nav-bar">
       <ul>
         <li>
-          <a href="index.html">Home</a>
+          <a href="../index.html" >Home</a>
         </li>
         <li>
-          <a href="pages-male.html">Products Male</a>
+          <a href="./pages-male.html"class="active">Products Male</a>
         </li>
         <li>
-          <a href="pages-female.html">Products Female</a>
+          <a href="./pages-female.html">Products Female</a>
         </li>
         <li>
-          <a href="pages-kids.html" class="active">Products Kids</a>
+          <a href="./pages-kids.html">Products Kids</a>
         </li>
         <li>
-          <a href="contacto.html">Contact</a>
+          <a href="./contacto.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -41,66 +41,66 @@
   <main>
     <div class="contenedor">
       <div class="contenido-principal">
-        <h1 class="contenido-principal__titulo">CLOTHING AND FOOTWEAR: KIDS</h1>
+        <h1 class="contenido-principal__titulo">ROPA Y CALZADO:HOMBRE</h1>
         <div class="container">
           <div class="item">
-            <img src="img/nene1.jpg" alt="Product 1">
-            <h3>ZIPPER KNIT JERSEY</h3>
-            <p class="item-description">A classic padded coat with a hood, perfect for keeping your child warm and stylish during colder seasons.</p>
+            <img src="../img/galeria1.jpg" alt="Producto 1">
+            <h3>HOUNDSTOOTH SUIT BLAZER</h3>
+            <p class="item-description">A classic blazer with a houndstooth pattern, perfect for formal occasions or adding a touch of elegance to your everyday look.</p>
           </div>
           <div class="item">
-            <img src="img/nene2.jpg" alt="Product 2">
-            <h3>ZIPPER KNIT JERSEY</h3>
-            <p class="item-description">Stylish padded coat featuring a hood and a houndstooth pattern, designed to keep your child comfortable and fashionable.</p>
+            <img src="../img/galeria2.jpg" alt="Producto 2">
+            <h3>HOUNDSTOOTH SUIT PANTS</h3>
+            <p class="item-description">Stylish suit pants featuring a houndstooth pattern, designed to be comfortable and versatile for any occasion.</p>
           </div>
           <div class="item">
-            <img src="img/nene3.jpg" alt="Product 3">
-            <h3>BOMBER CLOTH VARSITY</h3>
-            <p class="item-description">A soft and cozy packable padded coat, perfect for traveling or layering during unpredictable weather.</p>
+            <img src="../img/galeria3.jpg" alt="Producto 3">
+            <h3>SOFT FLANNEL SHIRT</h3>
+            <p class="item-description">A soft and cozy flannel shirt, perfect for layering or wearing on its own during colder seasons.</p>
           </div>
           <div class="item">
-            <img src="img/nene4.jpg" alt="Product 4">
-            <h3>HOODED JACKET EMBOSSED</h3>
-            <p class="item-description">Stay comfortable and active with this lightweight and breathable padded coat, designed for maximum flexibility and movement.</p>
+            <img src="../img/galeria4.jpg" alt="Producto 4">
+            <h3>ACTIVE SHIRT</h3>
+            <p class="item-description">Stay comfortable and active with this lightweight and breathable shirt, designed for maximum flexibility and movement.</p>
           </div>
           <div class="item">
-            <img src="img/nene6.jpg" alt="Product 5">
-            <h3>BOMBER VARSITY PATCHES</h3>
+            <img src="../img/galeria5.jpg" alt="Producto 5">
+            <h3>TURTLENECK JERSEY</h3>
             <p class="item-description">A classic turtleneck jersey made from high-quality fabric, providing warmth and style for any occasion.</p>
           </div>
           <div class="item">
-            <img src="img/nene7.jpg" alt="Product 6">
-            <h3>BOMBER VARSITY PATCHES</h3>
+            <img src="../img/galeria6.jpg" alt="Producto 6">
+            <h3>LIGHT PADDED VEST</h3>
             <p class="item-description">A lightweight and insulated vest, perfect for layering or as an outerwear piece during transitional seasons.</p>
           </div>
           <div class="item">
-            <img src="img/nene8.jpg" alt="Product 7">
-            <h3>SUDADERA AMONG US TM EMBOSSED FLUORESCENT</h3>
+            <img src="../img/galeria7.jpg" alt="Producto 7">
+            <h3>LIGHT PADDED VEST</h3>
             <p class="item-description">A versatile and stylish light padded vest, featuring a sleek design and practical pockets.</p>
           </div>
           <div class="item">
-            <img src="img/nene9.jpg" alt="Product 8">
-            <h3>BOMBER VARSITY PATCHES</h3>
-            <p class="item-description">A fashionable and comfortable light padded vest, perfect for adding an extra layer of warmth and style to your child's outfit.</p>
+            <img src="../img/galeria8.jpg" alt="Producto 8">
+            <h3>LIGHT PADDED VEST</h3>
+            <p class="item-description">A fashionable and comfortable light padded vest, perfect for adding an extra layer of warmth and style to your outfit.</p>
           </div>
           <div class="item">
-            <img src="img/nene10.jpg" alt="Product 9">
-            <h3>STRIPED SHIRT</h3>
-            <p class="item-description">A trendy and practical light padded vest, designed to keep your child warm and stylish during outdoor activities.</p>
+            <img src="../img/galeria9.jpg" alt="Producto 9">
+            <h3>LIGHT PADDED VEST</h3>
+            <p class="item-description">A trendy and practical light padded vest, designed to keep you warm and stylish during outdoor activities.</p>
           </div>
           <div class="item">
-            <img src="img/nene11.jpg" alt="Product 10">
-            <h3>PLUSH SWEATSHIRT AND PANTS SET</h3>
+            <img src="../img/galeria10.jpg" alt="Producto 10">
+            <h3>TECHNICAL TROUSERS WAIST JOGGER</h3>
             <p class="item-description">Comfortable and functional technical trousers with an adjustable waistband, perfect for an active lifestyle.</p>
           </div>
           <div class="item">
-            <img src="img/nene12.jpg" alt="Product 11">
-            <h3>SPORTY SWEATSHIRT COMBINED</h3>
+            <img src="../img/galeria11.jpg" alt="Producto 11">
+            <h3>TECHNICAL TROUSERS WAIST JOGGER</h3>
             <p class="item-description">Versatile and stylish technical trousers with a jogger-style waistband, suitable for various occasions.</p>
           </div>
           <div class="item">
-            <img src="img/nene5.jpg" alt="Product 12">
-            <h3>ITALIAN COLLAR DRESS SHIRT</h3>
+            <img src="../img/galeria12.jpg" alt="Producto 12">
+            <h3>TECHNICAL TROUSERS WAIST JOGGER</h3>
             <p class="item-description">Modern and comfortable technical trousers featuring a jogger-style waistband and functional pockets.</p>
           </div>
         </div>
@@ -119,12 +119,13 @@
 
   <div class="footer"> 
     <footer>
-      <p>Contact us at 444-444-444 or send an email to help@mycompany.com</p><br>
-      <p>To view our privacy policy, visit mycompany.com/privacy</p>
+      <p>Contáctanos al 444-444-444 o envía un correo a ayuda@miempresa.com</p><br>
+      <p>Para ver el aviso de privacidad, accede a miempresa.com/aviso</p>
     </footer>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.js"></script>
   <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-  <script src="js/app.js"></script>
-  <script src="script.js"></script>
+
+  <script src="../script/script.js"></script>
 </body>
 </html>
