--- a/pages/pages-female.html
+++ b/pages/pages-female.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elegance Attire</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
@@ -20,19 +20,19 @@
     <nav class="nav-bar">
       <ul>
         <li>
-          <a href="index.html">Home</a>
+          <a href="../index.html" >Home</a>
         </li>
         <li>
-          <a href="pages-male.html">Products Male</a>
+          <a href="./pages-male.html">Products Male</a>
         </li>
         <li>
-          <a href="pages-female.html" class="active">Products Female</a>
+          <a href="./pages-female.html"class="active">Products Female</a>
         </li>
         <li>
-          <a href="pages-kids.html">Products Kids</a>
+          <a href="./pages-kids.html">Products Kids</a>
         </li>
         <li>
-          <a href="contacto.html">Contact</a>
+          <a href="./contacto.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -44,62 +44,62 @@
         <h1 class="contenido-principal__titulo">ROPA Y CALZADO: MUJER</h1>
         <div class="container">
           <div class="item">
-            <img src="img/mujer1.jpg" alt="Producto 1">
+            <img src="../img/mujer1.jpg" alt="Producto 1">
             <h3>PADDED COAT WITH HOOD</h3>
             <p class="item-description">A classic padded coat with a hood, perfect for staying warm and stylish during colder seasons.</p>
           </div>
           <div class="item">
-            <img src="img/mujer2.jpg" alt="Producto 2">
+            <img src="../img/mujer2.jpg" alt="Producto 2">
             <h3>PADDED COAT WITH HOOD</h3>
             <p class="item-description">Stylish padded coat featuring a hood and a houndstooth pattern, designed to keep you comfortable and fashionable.</p>
           </div>
           <div class="item">
-            <img src="img/mujer3.jpg" alt="Producto 3">
+            <img src="../img/mujer3.jpg" alt="Producto 3">
             <h3>PACKABLE PADDED COAT</h3>
             <p class="item-description">A soft and cozy packable padded coat, perfect for traveling or layering during unpredictable weather.</p>
           </div>
           <div class="item">
-            <img src="img/mujer4.jpg" alt="Producto 4">
+            <img src="../img/mujer4.jpg" alt="Producto 4">
             <h3>PADDED COAT WITH HOOD</h3>
             <p class="item-description">Stay comfortable and active with this lightweight and breathable padded coat, designed for maximum flexibility and movement.</p>
           </div>
           <div class="item">
-            <img src="img/mujer5.jpg" alt="Producto 5">
+            <img src="../img/mujer5.jpg" alt="Producto 5">
             <h3>SATIN SHIRT WITH LACES</h3>
             <p class="item-description">A classic turtleneck jersey made from high-quality fabric, providing warmth and style for any occasion.</p>
           </div>
           <div class="item">
-            <img src="img/mujer6.jpg" alt="Producto 6">
+            <img src="../img/mujer6.jpg" alt="Producto 6">
             <h3>LIGHT PADDED VEST</h3>
             <p class="item-description">A lightweight and insulated vest, perfect for layering or as an outerwear piece during transitional seasons.</p>
           </div>
           <div class="item">
-            <img src="img/mujer7.jpg" alt="Producto 7">
+            <img src="../img/mujer7.jpg" alt="Producto 7">
             <h3>LIGHT PADDED VEST</h3>
             <p class="item-description">A versatile and stylish light padded vest, featuring a sleek design and practical pockets.</p>
           </div>
           <div class="item">
-            <img src="img/mujer8.jpg" alt="Producto 8">
+            <img src="../img/mujer8.jpg" alt="Producto 8">
             <h3>LIGHT PADDED VEST</h3>
             <p class="item-description">A fashionable and comfortable light padded vest, perfect for adding an extra layer of warmth and style to your outfit.</p>
           </div>
           <div class="item">
-            <img src="img/mujer9.jpg" alt="Producto 9">
+            <img src="../img/mujer9.jpg" alt="Producto 9">
             <h3>LIGHT PADDED VEST</h3>
             <p class="item-description">A trendy and practical light padded vest, designed to keep you warm and stylish during outdoor activities.</p>
           </div>
           <div class="item">
-            <img src="img/mujer10.jpg" alt="Producto 10">
+            <img src="../img/mujer10.jpg" alt="Producto 10">
             <h3>TECHNICAL TROUSERS WAIST JOGGER</h3>
             <p class="item-description">Comfortable and functional technical trousers with an adjustable waistband, perfect for an active lifestyle.</p>
           </div>
           <div class="item">
-            <img src="img/mujer11.jpg" alt="Producto 11">
+            <img src="../img/mujer11.jpg" alt="Producto 11">
             <h3>TECHNICAL TROUSERS WAIST JOGGER</h3>
             <p class="item-description">Versatile and stylish technical trousers with a jogger-style waistband, suitable for various occasions.</p>
           </div>
           <div class="item">
-            <img src="img/mujer12.jpg" alt="Producto 12">
+            <img src="../img/mujer12.jpg" alt="Producto 12">
             <h3>TECHNICAL TROUSERS WAIST JOGGER</h3>
             <p class="item-description">Modern and comfortable technical trousers featuring a jogger-style waistband and functional pockets.</p>
           </div>
@@ -124,7 +124,6 @@
     </footer>
   </div>
   <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-  <script src="js/app.js"></script>
-  <script src="script.js"></script>
+  <script src="../script/script.js"></script>
 </body>
 </html>
